--- a/src/Pokedex/Pokedex.csproj
+++ b/src/Pokedex/Pokedex.csproj
@@ -4,5 +4,9 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Pokedex.Abstractions\Pokedex.Abstractions.csproj" />
+  </ItemGroup>
+
 
 </Project>
