Add PokeAPI resource to DI container.

--- a/src/Pokedex/Pokedex.csproj
+++ b/src/Pokedex/Pokedex.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Pokedex.Abstractions\Pokedex.Abstractions.csproj" />
+    <ProjectReference Include="..\Pokedex.Resources.PokeAPI\Pokedex.Resources.PokeAPI.csproj" />
   </ItemGroup>
 
 
