--- a/src/Pokedex.Managers.Pokemon/Pokedex.Managers.Pokemon.csproj
+++ b/src/Pokedex.Managers.Pokemon/Pokedex.Managers.Pokemon.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.22" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.0" />
   </ItemGroup>
 
