Add config values to appsettings.json

--- a/src/Pokedex/appsettings.json
+++ b/src/Pokedex/appsettings.json
@@ -6,5 +6,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Funtranslations": {
+    "Endpoint": "https://api.funtranslations.com/translate",
+    "APIKey": "",
+    "CacheExpiryInSeconds": 3600 //1 hour.
+  }
 }
