--- a/src/Pokedex.Resources.Funtranslations/Pokedex.Resources.Funtranslations.csproj
+++ b/src/Pokedex.Resources.Funtranslations/Pokedex.Resources.Funtranslations.csproj
@@ -1,11 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="3.1.22" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="3.1.22" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.22" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="3.1.22" />
