--- a/src/Pokedex/Pokedex.csproj
+++ b/src/Pokedex/Pokedex.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Pokedex.Abstractions\Pokedex.Abstractions.csproj" />
     <ProjectReference Include="..\Pokedex.Managers.Pokemon\Pokedex.Managers.Pokemon.csproj" />
     <ProjectReference Include="..\Pokedex.Resources.Funtranslations\Pokedex.Resources.Funtranslations.csproj" />
