Fix endpoint in appsettings.

--- a/src/Pokedex/appsettings.json
+++ b/src/Pokedex/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "Funtranslations": {
-    "Endpoint": "https://api.funtranslations.com/translate",
+    "Endpoint": "https://api.funtranslations.com/translate/",
     "APIKey": "",
     "CacheExpiryInSeconds": 3600 //1 hour.
   }
